# aoimaxbot

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
aiomaxbot/: __init__.py
aiomaxbot/utils/: updates.py
